; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_peer/extr_eap.c_eap_get_config_phase1.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_peer/extr_eap.c_eap_get_config_phase1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eap_sm = type { i32 }
%struct.eap_peer_config = type { i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @eap_get_config_phase1(%struct.eap_sm* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.eap_sm*, align 8
  %4 = alloca %struct.eap_peer_config*, align 8
  store %struct.eap_sm* %0, %struct.eap_sm** %3, align 8
  %5 = load %struct.eap_sm*, %struct.eap_sm** %3, align 8
  %6 = call %struct.eap_peer_config* @eap_get_config(%struct.eap_sm* %5)
  store %struct.eap_peer_config* %6, %struct.eap_peer_config** %4, align 8
  %7 = load %struct.eap_peer_config*, %struct.eap_peer_config** %4, align 8
  %8 = icmp eq %struct.eap_peer_config* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %14

10:                                               ; preds = %1
  %11 = load %struct.eap_peer_config*, %struct.eap_peer_config** %4, align 8
  %12 = getelementptr inbounds %struct.eap_peer_config, %struct.eap_peer_config* %11, i32 0, i32 0
  %13 = load i8*, i8** %12, align 8
  store i8* %13, i8** %2, align 8
  br label %14

14:                                               ; preds = %10, %9
  %15 = load i8*, i8** %2, align 8
  ret i8* %15
}

declare dso_local %struct.eap_peer_config* @eap_get_config(%struct.eap_sm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
